Infraestructura/k8s/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana-svc
  name: grafana-svc
spec:
  ports:
    - name: port
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: grafana
  type: ClusterIP
